--- a/src/webapp/WEB-INF/pages/first/indexBye.html
+++ b/src/webapp/WEB-INF/pages/first/indexBye.html
@@ -3,13 +3,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>Bye</title>
 </head>
 <body>
 <div>
     <th:block th:each="msg : ${messages}">
-        <h1 th:text="${msg}"></h1>
+        <h2 th:text="${msg}"></h2>
     </th:block>
+    <a HREF="/hello">Hello</a>
 </div>
 </body>
 </html>
