--- a/src/webapp/WEB-INF/pages/first/index.html
+++ b/src/webapp/WEB-INF/pages/first/index.html
@@ -11,6 +11,7 @@
         <h1 th:text="${msg}"></h1>
     </th:block>
     <a href="/bye">Goodbye</a>
+    <a href="/cars">Cars</a>
 </div>
 </body>
 </html>
