--- a/src/webapp/WEB-INF/pages/first/indexBye.html
+++ b/src/webapp/WEB-INF/pages/first/indexBye.html
@@ -10,7 +10,7 @@
     <th:block th:each="msg : ${messages}">
         <h2 th:text="${msg}"></h2>
     </th:block>
-    <a HREF="/hello">Hello</a>
+    <a HREF="/">Hello</a>
 </div>
 </body>
 </html>
