--- a/src/webapp/WEB-INF/pages/second/cars.html
+++ b/src/webapp/WEB-INF/pages/second/cars.html
@@ -8,7 +8,7 @@
 <h1>2 cars of 5:</h1>
 <h2 th:text="${message}"></h2>
 <img src="https://upload.wikimedia.org/wikipedia/commons/c/c3/2018_Honda_CR-V_%28RW_MY18%29_%2BSport_2WD_wagon_%282018-10-22%29_01.jpg" alt="Honda" width="193" height="130">>
-<img src="https://www.hyundai.com/content/dam/hyundai/id/en/data/vehicle-thumbnail/product/creta/default/creta-480.png" alt="Hyundai" width="193" height="130">>
+<img src="https://www.hyundai.com/content/dam/hyundai/id/en/data/vehicle-thumbnail/product/creta/default/creta-480.png" alt="Hyundai" width="193" height="130">
 <a href="/">Back</a>
 </body>
 </html>
